fix: #15 ラウンド2（是正差分限定の検証）の指摘を反映する
- dumpVariableItem の tip が表セルの言い換えになっていたため削除し、
  注意を表セルに畳む（ラウンド1で削らせた欠陥の再生産だった）
- htmlResources をリテラルで名指ししていた tip を、コピー先ディレクトリの
  デフォルト値として示す形に書き換える
- htmlResourcesCharset に、htmlResourcesExtensionList の指定によらず
  書き換え対象になる旨を補う
- 距離のある後方参照を「前述」に戻し、1文中の語の重複を解消する
- checks/task-15.md・reviews/page-request_unit_test_setting_web.md に
  ラウンド1・2の全件記録を追加

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>